--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ body, html {
       <img src="static/algos.png" alt="Optimization Algorithms in Spyder" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Computer Science</b></p>
-        <p>Learning fundamentals of computer science throug MIT OCW.</p>
+        <p>Learning fundamentals of computer science through MIT OCW.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
