--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ body, html {
   <p class="w3-center"><em>Marketing Professional</em></p>
   <p>In March 2020, Parsable laid off 1/3 of its employees in a response to market fears around Covid. I was one of the folks laid off. I took the layoff as an opportunity to build my skills. And since march I've reviewed all the fundamental math subjects from algebra, through trig. and  integral calc. And I have begun multivariable calc. I've also taught myself Python, HTML, CSS, VS Code and Git.
     <br> 
-    <br>This website is both a repository of my projects and a project itself. I sourced the html template for this site from w3schools.com and I have heavily edited it to add functionality like embedded youtube videos, pdfs and contact us forms (check my work and send me a message at the bottom). 
+    <br>This website is both a repository of my projects and a project itself. I sourced the html template for this site from w3schools.com and I have heavily edited it to add functionality like embedded youtube videos, google analytics, pdfs and contact us forms (check my work and send me a message at the bottom). 
   </p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
